[gd_scene load_steps=6 format=3 uid="uid://bdn30cao25hiw"]

[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_g6bjx"]
[ext_resource type="LabelSettings" uid="uid://c57087kb6t0iv" path="res://assets/LG_white_48.tres" id="1_xm8uw"]
[ext_resource type="Texture2D" uid="uid://dqw1fky0at4al" path="res://assets/items/pixel heart 2.png" id="2_bblll"]
[ext_resource type="LabelSettings" uid="uid://b2dyrr3deoxuq" path="res://assets/LG_blue_64.tres" id="3_sihl4"]
[ext_resource type="LabelSettings" uid="uid://dwoj7dgthifc0" path="res://assets/LG_white_24.tres" id="4_tj22e"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6bjx")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HB" type="HBoxContainer" parent="MC"]
layout_mode = 2
size_flags_vertical = 0

[node name="ScoreLabel" type="Label" parent="MC/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "000"
label_settings = ExtResource("1_xm8uw")

[node name="HBHearts" type="HBoxContainer" parent="MC/HB"]
layout_mode = 2

[node name="H1" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_bblll")
stretch_mode = 4

[node name="H2" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_bblll")
stretch_mode = 4

[node name="H3" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_bblll")
stretch_mode = 4

[node name="H4" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_bblll")
stretch_mode = 4

[node name="H5" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_bblll")
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.00392157, 0.0980392, 0.866667)

[node name="VBLabelComplete" type="VBoxContainer" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBLabelComplete"]
layout_mode = 2
text = "LEVEL COMPLETE"
label_settings = ExtResource("3_sihl4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/VBLabelComplete"]
layout_mode = 2
text = "Press Jump For Next Level"
label_settings = ExtResource("4_tj22e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBGameOver" type="VBoxContainer" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBGameOver"]
layout_mode = 2
text = "GAME OVER"
label_settings = ExtResource("3_sihl4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/VBGameOver"]
layout_mode = 2
text = "Press Jump For Main Menu"
label_settings = ExtResource("4_tj22e")
horizontal_alignment = 1
vertical_alignment = 1
